support nest scope and css

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-RABI_DELAY=1s,10s
+RABI_DELAY=1s,2s
 RABI_CONCURRENCY=1
 RABI_THROTTLE_NUM=2
 RABI_THROTTLE_DURATION=1s
-RABI_TIMEOUT=1s
-RABI_MODE=headless
+RABI_TIMEOUT=5s
+#RABI_MODE=headless
+RABI_MODE=browser
