replace chromedp.Click with custom JsClickNode api

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ RABI_DELAY=1s,2s
 RABI_CONCURRENCY=1
 RABI_THROTTLE_NUM=2
 RABI_THROTTLE_DURATION=1s
-RABI_TIMEOUT=5s
-#RABI_MODE=headless
-RABI_MODE=browser
+RABI_TIMEOUT=8s
+RABI_MODE=headless
+#RABI_MODE=browser
+RABI_DEBUG=false
+RABI_OUT=out
