--- a/.env
+++ b/.env
@@ -5,7 +5,11 @@ RABI_THROTTLE_DURATION=1s
 RABI_TIMEOUT=3s
 RABI_MODE=headless
 #RABI_MODE=browser
-RABI_DEBUG=false
+ABI_DEBUG=false
 RABI_OUT=out
-RABI_STRICT=false
+#RABI_STRICT=false
+RABI_STRICT=true
 RABI_PROXY=
+RABI_SCROLL_TYPE=
+RABI_SCROLL_TOP=
+RABI_SCROLL_LEFT=
