--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ RABI_OUT=out
 #RABI_STRICT=false
 RABI_STRICT=true
 RABI_PROXY=
-RABI_SCROLL_TYPE=
-RABI_SCROLL_TOP=
-RABI_SCROLL_LEFT=
+RABI_SCROLL_TYPE=scrollBy
+RABI_SCROLL_TOP=1000
+RABI_SCROLL_LEFT=0
